--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: immich_server
     image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION:-release}
     command: ["start.sh", "immich"]
+    networks:
+      - immich
     volumes:
       - ${UPLOAD_LOCATION}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
@@ -13,7 +15,6 @@ services:
     depends_on:
       - redis
       - database
-      - typesense
     restart: always
 
   immich-microservices:
@@ -23,6 +24,8 @@ services:
     #   file: hwaccel.yml
     #   service: hwaccel
     command: ["start.sh", "microservices"]
+    networks:
+      - immich
     volumes:
       - ${UPLOAD_LOCATION}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
@@ -31,45 +34,29 @@ services:
     depends_on:
       - redis
       - database
-      - typesense
-    restart: always
-
-  immich-machine-learning:
-    container_name: immich_machine_learning
-    image: ghcr.io/immich-app/immich-machine-learning:${IMMICH_VERSION:-release}
-    volumes:
-      - model-cache:/cache
-    env_file:
-      - .env
     restart: always
 
   immich-web:
     container_name: immich_web
     image: ghcr.io/immich-app/immich-web:${IMMICH_VERSION:-release}
+    networks:
+      - immich
     env_file:
       - .env
-    restart: always
-
-  typesense:
-    container_name: immich_typesense
-    image: typesense/typesense:0.24.1@sha256:9bcff2b829f12074426ca044b56160ca9d777a0c488303469143dd9f8259d4dd
-    environment:
-      - TYPESENSE_API_KEY=${TYPESENSE_API_KEY}
-      - TYPESENSE_DATA_DIR=/data
-      # remove this to get debug messages
-      - GLOG_minloglevel=1
-    volumes:
-      - tsdata:/data
     restart: always
 
   redis:
     container_name: immich_redis
     image: redis:6.2-alpine@sha256:70a7a5b641117670beae0d80658430853896b5ef269ccf00d1827427e3263fa3
+    networks:
+      - immich
     restart: always
 
   database:
     container_name: immich_postgres
     image: postgres:14-alpine@sha256:28407a9961e76f2d285dc6991e8e48893503cc3836a4755bbc2d40bcc272a441
+    networks:
+      - immich
     env_file:
       - .env
     environment:
@@ -83,6 +70,8 @@ services:
   immich-proxy:
     container_name: immich_proxy
     image: ghcr.io/immich-app/immich-proxy:${IMMICH_VERSION:-release}
+    networks:
+      - immich
     environment:
       # Make sure these values get passed through from the env file
       - IMMICH_SERVER_URL
@@ -94,7 +83,6 @@ services:
       - immich-web
     restart: always
 
-volumes:
-  pgdata:
-  model-cache:
-  tsdata:
+networks:  
+  immich:
+    external: true
