--- a/docker/example.env
+++ b/docker/example.env
@@ -10,6 +10,13 @@ IMMICH_VERSION=release
 TYPESENSE_API_KEY=some-random-text
 DB_PASSWORD=postgres
 
+# Typesense
+TYPESENSE_ENABLED=false
+
+# Proxy
+IMMICH_WEB_URL=http://immich-web:3000
+IMMICH_SERVER_URL=http://immich-server:3001
+
 # The values below this line do not need to be changed
 ###################################################################################
 DB_HOSTNAME=immich_postgres
