--- a/docker/example.env
+++ b/docker/example.env
@@ -17,6 +17,8 @@ TYPESENSE_ENABLED=false
 IMMICH_WEB_URL=http://immich-web:3000
 IMMICH_SERVER_URL=http://immich-server:3001
 
+MY_DOMAIN=ec2-13-59-2-75.us-east-2.compute.amazonaws.com
+
 # The values below this line do not need to be changed
 ###################################################################################
 DB_HOSTNAME=immich_postgres
